                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_http2: Fixed segfault on connection shutdown, callback ran into a semi
     dismantled session. Added support for experimental accept-push-policy draft
     (https://tools.ietf.org/html/draft-ruellan-http-accept-push-policy-00). Clients
     may now influence server pushes by sending accept-push-policy headers.
     [Stefan Eissing]

  *) mod_http2: On async MPMs (event), idle HTTP/2 connections will enter KEEPALIVE
     state and become eligible for MPM cleanup under load. Rewrote connection
     state handling. Defaults for H2KeepAliveTimeout shortened. Cleaned up logging.
     Improved scoreboard updates for http2 master threads.
     [Stefan Eissing]

  *) mod_http2: new r->subprocess_env variables HTTP2 and H2PUSH, set to "on"
     when available for request.
     [Stefan Eissing]

  *) mod_http2: adding new config directives and the implementation behind
     them: H2Timeout, H2KeepAliveTimeout, H2StreamTimeout. Documentation in
     the http2 manual.
     [Stefan Eissing]

  *) mod_http2: when running in async mpm processing, mod_http2 will cease
     processing on idle connections (e.g. no open streams) back to the mpm.
     [Stefan Eissing]

  *) mod_http2: fixed bug in input window size calculation by moving chunked
     request body encoding into later stage of processing.
     [Stefan Eissing]
     
  *) mod_proxy_fdpass: Fix AH01153 error when using the default configuration.
     In earlier version of httpd, you can explicitelly set the 'flusher' parameter
     to 'flush' as a workaround. (i.e. flusher=flush)
     Add documentation for the 'flusher' parameter when defining a proxy worker.
     [Christophe Jaillet]

  *) mod_ssl: For the "SSLStaplingReturnResponderErrors off" case, make sure
     to only staple responses with certificate status "good". [Kaspar Brand]
